--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Hello World</title>
-        <meta name="description" content="A simple introduction to HTML">
-        <meta name="author" content="Matt Milner">
+        <title>The Henny Diaries</title>
+        <meta name="description" content="A simple introduction to Henny">
+        <meta name="author" content="Jdizzle">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <!--
         <script>
@@ -11,10 +11,10 @@
         </script>-->
     </head>
     <body>
-        <p id="p2" class="lead">Hello HTML Fundamentals</p>
-        <p id="p1" name="p1n" class="lead">from Matt</p>
-        one
-        two
-        three
+        <p id="p2" class="lead">The Henny Diaries</p>
+        <p id="p1" name="p1n" class="lead">A simple introduction to Henny</p>
+        meow
+        purr
+        wooowwww
     </body>
 </html>
