--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <p id="p2" class="lead">The Henny Diaries</p>
+        <img src="Images/pic1.jpg" height="150px" width="100px">
         <p id="p1" name="p1n" class="lead">A simple introduction to Henny</p>
         meow
         purr
