--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         </script>-->
     </head>
     <body>
-        <p id="p2" class="lead">The Henny Diaries</p>
-        <img src="Images/pic1.jpg" height="150px" width="100px">
-        <p id="p1" name="p1n" class="lead">A simple introduction to Henny</p>
-        meow
-        purr
-        wooowwww
+        <div style="text-align: center"> 
+            <p id="p2" class="lead">The Henny Diaries</p>
+            <img src="Images/pic1.jpg" height="150px" width="100px">
+            <p id="p1" name="p1n" class="lead">A simple introduction to Henny</p>
+            meow
+            purr
+            wooowwww
+        </div>
     </body>
 </html>
