Added ordered list

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     </head>
     <body>
         <div style="text-align: center"> 
-            <p id="p2" class="lead">The Henny Diaries</p>
-            <img src="Images/pic1.jpg" height="150px" width="100px">
-            <p id="p1" name="p1n" class="lead">A simple introduction to Henny</p>
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">Sleeping</li>
+                <li class="breadcrumb-item">Eating</li>
+                <li class="breadcrumb-item">Cuddling</li>
+                <li class="breadcrumb-item active">Playing</li>
+            </ol>
+            <h1 id="p2" class="lead" style="color:red;font-size:40px">The Henny Diaries</h1>
+            <img src="Images/pic1.jpg" height="300px" width="200px">
+            <h1 id="p1" name="p1n" class="lead" style="color:red;font-size:20px">A simple introduction to Henny</h1>
             meow
             purr
             wooowwww
